Setup classLoader to work on external projects ...